--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,23 @@
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.taskBg.completed {
+   
+    background-color: #f0f0f0;
+  }
+  
+  
+  .taskText.completed {
+ 
+    text-decoration: line-through;
+    color: #888;
+  }
+  .taskText.completed {
+    text-decoration: line-through;
+    opacity: 0.4;
+  }
+  .white::placeholder {
+    color: white;
+    font-weight: bold;
+  }
+  .white{
+    font-weight: bold;
+  }
